// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/post_view/ShowMore should match snapshot 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 200px;"
    >
      <div>
        <p>
          text
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostAttachment on collapsed view 1`] = `
<div>
  <div
    class="post-message post-message--collapsed post-message--overflow"
  >
    <div
      class="post-message__text-container"
      style="max-height: 200px;"
    />
    <div
      class="post-collapse"
    >
      <div
        class="post-attachment-collapse__show-more"
      >
        <div
          class="post-collapse__show-more-line"
        />
        <button
          class="post-collapse__show-more-button"
          id="showMoreButton"
        >
          <span
            class="fa fa-angle-down"
          />
          Show more
        </button>
        <div
          class="post-collapse__show-more-line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostAttachment on expanded view 1`] = `
<div>
  <div
    class="post-message post-message--expanded post-message--overflow"
  >
    <div
      class="post-message__text-container"
      style=""
    />
    <div
      class="post-collapse"
    >
      <div
        class="post-attachment-collapse__show-more"
      >
        <div
          class="post-collapse__show-more-line"
        />
        <button
          class="post-collapse__show-more-button"
          id="showMoreButton"
        >
          <span
            class="fa fa-angle-up"
          />
          Show less
        </button>
        <div
          class="post-collapse__show-more-line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostMessageView on collapsed view 1`] = `
<div>
  <div
    class="post-message post-message--collapsed post-message--overflow"
  >
    <div
      class="post-message__text-container"
      style="max-height: 200px;"
    />
    <div
      class="post-collapse"
    >
      <div
        class="post-collapse__show-more"
      >
        <div
          class="post-collapse__show-more-line"
        />
        <button
          class="post-collapse__show-more-button"
          id="showMoreButton"
        >
          <span
            class="fa fa-angle-down"
          />
          Show more
        </button>
        <div
          class="post-collapse__show-more-line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostMessageView on expanded view 1`] = `
<div>
  <div
    class="post-message post-message--expanded post-message--overflow"
  >
    <div
      class="post-message__text-container"
      style=""
    />
    <div
      class="post-collapse"
    >
      <div
        class="post-collapse__show-more"
      >
        <div
          class="post-collapse__show-more-line"
        />
        <button
          class="post-collapse__show-more-button"
          id="showMoreButton"
        >
          <span
            class="fa fa-angle-up"
          />
          Show less
        </button>
        <div
          class="post-collapse__show-more-line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostMessageView on expanded view with compactDisplay 1`] = `
<div>
  <div
    class="post-message post-message--expanded post-message--overflow"
  >
    <div
      class="post-message__text-container"
      style=""
    />
    <div
      class="post-collapse"
    >
      <div
        class="post-collapse__show-more"
      >
        <div
          class="post-collapse__show-more-line"
        />
        <button
          class="post-collapse__show-more-button"
          id="showMoreButton"
        >
          <span
            class="fa fa-angle-up"
          />
          Show less
        </button>
        <div
          class="post-collapse__show-more-line"
        />
      </div>
    </div>
  </div>
</div>
`;
